--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -3,7 +3,7 @@ name: Test Release
 permissions:
   contents: write
   actions: write
-  
+
 on:
   workflow_dispatch:
     inputs:
@@ -15,7 +15,7 @@ on:
       kernels_to_build:
         description: |
           Comma-separated list of kernels to build/release, e.g.:
-            a12-5.10,a13-5.10,a13-5.15,a14-5.15,a14-6.1,a15-6.6
+          a12-5.10,a13-5.10,a13-5.15,a14-5.15,a14-6.1,a15-6.6
           or "all" to build every kernel.
         required: true
         type: string
@@ -25,19 +25,19 @@ on:
         required: true
         type: choice
         options:
-          - Official
-          - Next
-          - MKSU
-          - SukiSU
+        - Official
+        - Next
+        - MKSU
+        - SukiSU
         default: SukiSU
       kernelsu_branch:
         description: "Select KSU branch"
         required: true
         type: choice
         options:
-          - Stable(标准)
-          - Dev(开发)
-          - Other(其他/指定)
+        - Stable(标准)
+        - Dev(开发)
+        - Other(其他/指定)
         default: Dev(开发)
       version:
         description: 'Custom version name (e.g., characters after 5.10.198 / leave blank to use default version number)'
@@ -61,6 +61,7 @@ on:
 
 jobs:
   get_manager:
+    if: ${{ inputs.get_manager }}
     uses: ./.github/workflows/get-manager.yml
     secrets: inherit
     with:
@@ -138,8 +139,6 @@ jobs:
       use_zram: ${{ inputs.use_zram }}
       use_kpm: ${{ inputs.use_kpm }}
 
----
-## Build Status Checker
   check-build-status:
     runs-on: ubuntu-latest
     needs:
@@ -150,63 +149,64 @@ jobs:
       - build-kernel-a14-5-15
       - build-kernel-a14-6-1
       - build-kernel-a15-6-6
-    if: always() # Ensures this job runs to determine overall status
+    if: always()
     outputs:
       should_release: ${{ steps.check.outputs.should_release }}
+    env:
+      # Fixed environment variables - each on its own line
+      SHOULD_RUN_A12_5_10: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a12') || contains(github.event.inputs.kernels_to_build, 'a12-5.10') }}
+      SHOULD_RUN_A13_5_10: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13-5.10') || contains(github.event.inputs.kernels_to_build, 'a13') }}
+      SHOULD_RUN_A13_5_15: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13') || contains(github.event.inputs.kernels_to_build, 'a13-5.15') }}
+      SHOULD_RUN_A14_5_15: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a14-5.15') || contains(github.event.inputs.kernels_to_build, 'a14') }}
+      SHOULD_RUN_A14_6_1: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a14') || contains(github.event.inputs.kernels_to_build, 'a14-6.1') }}
+      SHOULD_RUN_A15_6_6: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a15') || contains(github.event.inputs.kernels_to_build, 'a15-6.6') }}
+      
+      RESULT_GET_MANAGER: ${{ needs.get_manager.result }}
+      RESULT_A12_5_10: ${{ needs.build-kernel-a12-5-10.result }}
+      RESULT_A13_5_10: ${{ needs.build-kernel-a13-5-10.result }}
+      RESULT_A13_5_15: ${{ needs.build-kernel-a13-5-15.result }}
+      RESULT_A14_5_15: ${{ needs.build-kernel-a14-5-15.result }}
+      RESULT_A14_6_1: ${{ needs.build-kernel-a14-6-1.result }}
+      RESULT_A15_6_6: ${{ needs.build-kernel-a15-6-6.result }}
     steps:
       - name: Determine if release should proceed
         id: check
-        env:
-          SHOULD_RUN_A12_5_10: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a12') || contains(github.event.inputs.kernels_to_build, 'a12-5.10') }}
-          SHOULD_RUN_A13_5_10: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13-5.10') || contains(github.event.inputs.kernels_to_build, 'a13') }}
-          SHOULD_RUN_A13_5_15: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13') || contains(github.event.inputs.kernels_to_build, 'a13-5.15') }}
-          SHOULD_RUN_A14_5_15: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a14-5.15') || contains(github.event.inputs.kernels_to_build, 'a14') }}
-          SHOULD_RUN_A14_6_1: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a14') || contains(github.event.inputs.kernels_to_build, 'a14-6.1') }}
-          SHOULD_RUN_A15_6_6: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a15') || contains(github.event.inputs.kernels_to_build, 'a15-6.6') }}
-
-          RESULT_GET_MANAGER: ${{ needs.get_manager.result }}
-          RESULT_A12_5_10: ${{ needs.build-kernel-a12-5-10.result }}
-          RESULT_A13_5_10: ${{ needs.build-kernel-a13-5-10.result }}
-          RESULT_A13_5_15: ${{ needs.build-kernel-a13-5-15.result }}
-          RESULT_A14_5_15: ${{ needs.build-kernel-a14-5-15.result }}
-          RESULT_A14_6_1: ${{ needs.build-kernel-a14-6-1.result }}
-          RESULT_A15_6_6: ${{ needs.build-kernel-a15-6-6.result }}
-          
         run: |
           SHOULD_PROCEED="true"
           ERROR_MESSAGE=""
-
+          
           echo "--- Checking Job Statuses ---"
           echo "get_manager result: $RESULT_GET_MANAGER"
-
-          # 1. Check get_manager job
-          if [[ "$RESULT_GET_MANAGER" != "success" ]]; then
-            SHOULD_PROCEED="false"
-            ERROR_MESSAGE+="get_manager job did not succeed (result: $RESULT_GET_MANAGER). "
+          
+          # 1. Check get_manager job only if it was supposed to run
+          if [[ "${{ inputs.get_manager }}" == "true" ]]; then
+            if [[ "$RESULT_GET_MANAGER" != "success" ]]; then
+              SHOULD_PROCEED="false"
+              ERROR_MESSAGE+="get_manager job did not succeed (result: $RESULT_GET_MANAGER). "
+            fi
           fi
-
+          
           # Function to check a kernel job
           check_kernel_job() {
             local kernel_id=$1
             local should_run_flag=$2
             local actual_result=$3
-
+            
             echo "Checking kernel $kernel_id (Should Run: $should_run_flag, Actual Result: $actual_result)..."
-
+            
             if [[ "$should_run_flag" == "true" ]]; then
               if [[ "$actual_result" != "success" ]]; then
                 SHOULD_PROCEED="false"
                 ERROR_MESSAGE+="Job for $kernel_id was expected to run but did not succeed (result: $actual_result). "
               fi
             else
-              if [[ "$actual_result" == "failure" ]]; then # If it was skipped but failed for some reason
+              if [[ "$actual_result" == "failure" ]]; then
                 SHOULD_PROCEED="false"
-                ERROR_MESSAGE+="Job for $kernel_id was NOT expected to run but failed (result: $actual_result). This indicates a problem with its own 'if' condition or the workflow setup. "
+                ERROR_MESSAGE+="Job for $kernel_id was NOT expected to run but failed (result: $actual_result). This indicates a problem. "
               fi
-              # If actual_result is 'skipped' (which it should be for unselected jobs), SHOULD_PROCEED remains true.
             fi
           }
-
+          
           check_kernel_job "a12-5.10" "$SHOULD_RUN_A12_5_10" "$RESULT_A12_5_10"
           check_kernel_job "a13-5.10" "$SHOULD_RUN_A13_5_10" "$RESULT_A13_5_10"
           check_kernel_job "a13-5.15" "$SHOULD_RUN_A13_5_15" "$RESULT_A13_5_15"
@@ -223,28 +223,22 @@ jobs:
             exit 1
           fi
 
----
-## Release Trigger
   trigger-release:
     runs-on: ubuntu-latest
     permissions:
       contents: write
       actions: write
-    # ▼▼▼ KEY CHANGE HERE: Simplified `needs` to only the jobs that *always* run or are critical for decision ▼▼▼
     needs:
       - check-build-status
-      - get_manager # Keep this as you download manager artifacts later in this job
-    
-    # Keep if: always() to ensure the job execution is attempted
-    if: always() 
+      - get_manager
+    if: always()
     env:
-      REPO_OWNER: Kavi 
+      REPO_OWNER: Kavi
       REPO_NAME: GKI_KernelSU_SUSFS
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       RELEASE_NAME: "GKI Kernel: ${{ inputs.kernelsu_variant == 'Next' && 'KernelSU-' || '' }} ${{ inputs.kernelsu_variant }}"
       INITIAL_RELEASE_NOTES: |
         This release includes **${{ inputs.kernelsu_variant == 'Next' && 'KernelSU' || '' }}${{ inputs.kernelsu_variant }}, please note the KSU version here**, SUSFS v1.5.8, LZ4KD
-
         Features:
         -> ${{ inputs.kernelsu_variant == 'Next' && 'KernelSU-' || '' }}${{ inputs.kernelsu_variant }}-${{ inputs.kernelsu_branch }}
         -> SUSFS ඞ v1.5.8
@@ -258,31 +252,24 @@ jobs:
         -> **LZ4KD&ONEPLUS_LZ4K** ${{ inputs.use_zram && 'supported' || 'not supported' }}
         
         <details>
-        
         <summary>Notes:</summary>
         - -> In SUS SU Mode 2, it will show as disabled or incompatible, the reason is that non-kprobe hooks were used (when compiling the kernel), and non-kprobe hooks are no longer needed!
         - -> In the latest version of susfs, flashing AK3 compressed package with Kernel Flasher will brick your device, try https://github.com/libxzr/HorizonKernelFlasher!
-
         </details>
-
-        Modules: 
-        -> https://github.com/sidex15/ksu_module_susfs
         
+        Modules:
+        -> https://github.com/sidex15/ksu_module_susfs
     steps:
-      # This first step now explicitly checks the release conditions.
-      # If these conditions are NOT met, this step will be SKIPPED,
-      # and all subsequent steps in this job will also be skipped.
       - name: Conditional Release Check
         id: release_check
         if: ${{ inputs.make_release && needs.check-build-status.outputs.should_release == 'true' }}
         run: echo "Release conditions met. Proceeding with release."
-
+        
       - name: Checkout code
-        # This step, and all subsequent steps, now also needs to be conditional.
         if: ${{ steps.release_check.outcome == 'success' }}
         uses: actions/checkout@v3
-
-      - name: Fetch KSU and SUSFS Commit Info and Build Final Release Notes
+        
+      - name: Fetch KSU and SUSFS Commit Info
         id: build_notes
         if: ${{ steps.release_check.outcome == 'success' }}
         run: |
@@ -294,8 +281,9 @@ jobs:
               KSU_BRANCH="next"
             fi
           fi
+          
           echo "KSU_BRANCH=$KSU_BRANCH" >> $GITHUB_ENV
-
+          
           KSU_REPO_URL=""
           KSU_REPO_URL2=""
           if [ "${{ inputs.kernelsu_variant }}" == "Official" ]; then
@@ -348,10 +336,10 @@ jobs:
           FINAL_RELEASE_NOTES+="\n\nCommit hashes and links (the following commits refer to the progress of KSU or SUSFS at the time of this compilation):"
           FINAL_RELEASE_NOTES+="\n- **KernelSU is ${{ inputs.kernelsu_variant }}-${KSU_BRANCH}** (Commit): [${KSU_REF}](${KSU_URL})"
           FINAL_RELEASE_NOTES+="\n- **SUSFS4KSU** (Commit):"
-
+          
           GITLAB_OWNER="simonpunk"
           GITLAB_REPO="susfs4ksu"
-
+          
           declare -A BRANCH_MAP=(
             ["a12-5.10"]="gki-android12-5.10"
             ["a13-5.10"]="gki-android13-5.10"
@@ -370,11 +358,19 @@ jobs:
             IFS=',' read -r -a INPUT_KERNELS <<< "${{ inputs.kernels_to_build }}"
             for kernel_input in "${INPUT_KERNELS[@]}"; do
               case "$kernel_input" in
-                "a12") KERNELS_TO_FETCH_SUSFS+=("a12-5.10") ;;
-                "a13") KERNELS_TO_FETCH_SUSFS+=("a13-5.10" "a13-5.15") ;;
-                "a14") KERNELS_TO_FETCH_SUSFS+=("a14-5.15" "a14-6.1") ;;
-                "a15") KERNELS_TO_FETCH_SUSFS+=("a15-6.6") ;;
-                *) 
+                "a12")
+                  KERNELS_TO_FETCH_SUSFS+=("a12-5.10")
+                  ;;
+                "a13")
+                  KERNELS_TO_FETCH_SUSFS+=("a13-5.10" "a13-5.15")
+                  ;;
+                "a14")
+                  KERNELS_TO_FETCH_SUSFS+=("a14-5.15" "a14-6.1")
+                  ;;
+                "a15")
+                  KERNELS_TO_FETCH_SUSFS+=("a15-6.6")
+                  ;;
+                *)
                   if [[ -n "${BRANCH_MAP[$kernel_input]}" ]]; then
                     KERNELS_TO_FETCH_SUSFS+=("$kernel_input")
                   else
@@ -385,22 +381,21 @@ jobs:
             done
             KERNELS_TO_FETCH_SUSFS=( $(printf "%s\n" "${KERNELS_TO_FETCH_SUSFS[@]}" | sort -u) )
           fi
-
+          
           for kernel_id in "${KERNELS_TO_FETCH_SUSFS[@]}"; do
             susfs_branch_name="${BRANCH_MAP[$kernel_id]}"
-            
             if [[ -n "$susfs_branch_name" ]]; then
               SUSFS_COMMIT_HASH=$(git ls-remote "https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO.git" "refs/heads/$susfs_branch_name" | awk '{ print $1 }')
               SUSFS_COMMIT_HASH="${SUSFS_COMMIT_HASH:-UNKNOWN_COMMIT}"
               SUSFS_COMMIT_URL="https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO/-/commit/$SUSFS_COMMIT_HASH"
-              FINAL_RELEASE_NOTES+="\n  - ${kernel_id}: [${SUSFS_COMMIT_HASH}](${SUSFS_COMMIT_URL})"
+              FINAL_RELEASE_NOTES+="\n - ${kernel_id}: [${SUSFS_COMMIT_HASH}](${SUSFS_COMMIT_URL})"
             else
               echo "Warning: SUSFS branch name not found for kernel ID: $kernel_id. Cannot fetch commit info." >&2
             fi
           done
           
           FINAL_RELEASE_NOTES+="\n\n</details>"
-
+          
           echo "FULL_RELEASE_NOTES<<EOF" >> $GITHUB_ENV
           echo -e "$FINAL_RELEASE_NOTES" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
@@ -410,41 +405,40 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-            LATEST_TAG=$(gh api repos/$REPO_OWNER/$REPO_NAME/tags --jq '.[0].name' 2>/dev/null)
-            
-            if [ -z "$LATEST_TAG" ]; then
-              echo "No previous tags found. Starting from v1.5.8-r0."
-              LATEST_TAG="v1.5.8-r0"
-            fi
-            
-            BASE_VERSION=$(echo "$LATEST_TAG" | awk -F'-r' '{print $1}')
-            REVISION=$(echo "$LATEST_TAG" | awk -F'-r' '{print $2}')
-            
-            if [[ "$BASE_VERSION" != "v1.5.8" ]]; then
-              echo "Base version changed from $BASE_VERSION to v1.5.8. Resetting revision to 0."
-              REVISION=0
-            fi
-            
-            REVISION=$((REVISION + 1))
-            
-            NEW_TAG="v1.5.8-r${REVISION}"
-            
-            echo "New tag generated: $NEW_TAG"
-            echo "NEW_TAG=${NEW_TAG}" >> $GITHUB_ENV
-            
-            git tag "$NEW_TAG"
-            git push --tags
-
+          LATEST_TAG=$(gh api repos/$REPO_OWNER/$REPO_NAME/tags --jq '.[0].name' 2>/dev/null)
+          if [ -z "$LATEST_TAG" ]; then
+            echo "No previous tags found. Starting from v1.5.8-r0."
+            LATEST_TAG="v1.5.8-r0"
+          fi
+          
+          BASE_VERSION=$(echo "$LATEST_TAG" | awk -F'-r' '{print $1}')
+          REVISION=$(echo "$LATEST_TAG" | awk -F'-r' '{print $2}')
+          
+          if [[ "$BASE_VERSION" != "v1.5.8" ]]; then
+            echo "Base version changed from $BASE_VERSION to v1.5.8. Resetting revision to 0."
+            REVISION=0
+          fi
+          
+          REVISION=$((REVISION + 1))
+          NEW_TAG="v1.5.8-r${REVISION}"
+          
+          echo "New tag generated: $NEW_TAG"
+          echo "NEW_TAG=${NEW_TAG}" >> $GITHUB_ENV
+          
+          git tag "$NEW_TAG"
+          git push --tags
+          
       - name: Download Artifacts
         if: ${{ steps.release_check.outcome == 'success' }}
         uses: actions/download-artifact@v4
         with:
           path: ./downloaded-artifacts
-
+          
       - name: Set KSU Version for Final Release Name
         if: ${{ steps.release_check.outcome == 'success' }}
         run: |
           KSU_VERSION_SUFFIX=""
+          
           if [ "${{ inputs.kernelsu_variant }}" == "Next" ]; then
             git clone https://github.com/KernelSU-Next/KernelSU-Next.git --depth 1 temp_ksu_repo || true
             if [ -d "temp_ksu_repo" ]; then
@@ -468,8 +462,9 @@ jobs:
               echo "Warning: Could not clone SukiSU-Ultra repository for versioning." >&2
             fi
           fi
+          
           echo "RELEASE_NAME=${{ env.RELEASE_NAME }}${KSU_VERSION_SUFFIX} & SUSFS v1.5.8" >> $GITHUB_ENV
-
+          
       - name: Create GitHub Release
         if: ${{ steps.release_check.outcome == 'success' }}
         uses: actions/create-release@v1
@@ -479,7 +474,7 @@ jobs:
           release_name: ${{ env.RELEASE_NAME }}
           body: ${{ env.FULL_RELEASE_NOTES }}
           token: ${{ secrets.GITHUB_TOKEN }}
-
+          
       - name: Dynamically Upload Release Assets
         if: ${{ steps.release_check.outcome == 'success' }}
         env:
@@ -487,15 +482,15 @@ jobs:
         run: |
           echo "Listing downloaded artifacts for upload:"
           ls -R ./downloaded-artifacts/ || true
-
+          
           echo "Uploading manager files (if found)..."
           find "./downloaded-artifacts" -type f -name "*Manager*" -print -exec gh release upload "${{ env.NEW_TAG }}" {} \; || true
-
+          
           echo "Uploading kernel files (if found)..."
           find "./downloaded-artifacts" -type f -name "*_kernel-*" -print -exec gh release upload "${{ env.NEW_TAG }}" {} \; || true
-
+          
           echo "Finished attempting to upload assets."
-
+          
       - name: Display Files Uploaded (Confirmation)
         if: ${{ steps.release_check.outcome == 'success' }}
         run: |
