--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -453,6 +453,19 @@ jobs:
         with:
           path: ./downloaded-artifacts
           
+      # NEW: Prepare artifacts for upload
+      - name: Prepare Artifacts for Upload
+        if: ${{ steps.release_check.outcome == 'success' }}
+        run: |
+          # Create a new directory for release assets
+          mkdir -p release-assets
+          
+          # Find and copy all artifacts to a flat directory structure
+          find ./downloaded-artifacts -type f -exec cp -v {} ./release-assets \;
+          
+          echo "Artifacts prepared for upload:"
+          ls -lh ./release-assets
+          
       - name: Set KSU Version for Final Release Name
         if: ${{ steps.release_check.outcome == 'success' }}
         run: |
@@ -499,19 +512,18 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "Listing downloaded artifacts for upload:"
-          ls -R ./downloaded-artifacts/ || true
+          echo "Uploading release assets..."
           
-          echo "Uploading manager files (if found)..."
-          find "./downloaded-artifacts" -type f -name "*Manager*" -print -exec gh release upload "${{ env.NEW_TAG }}" {} \; || true
+          # Upload all files in the release-assets directory
+          for file in ./release-assets/*; do
+            echo "Uploading $file"
+            gh release upload "${{ env.NEW_TAG }}" "$file"
+          done
           
-          echo "Uploading kernel files (if found)..."
-          find "./downloaded-artifacts" -type f -name "*_kernel-*" -print -exec gh release upload "${{ env.NEW_TAG }}" {} \; || true
+          echo "Upload completed!"
           
-          echo "Finished attempting to upload assets."
-          
-      - name: Display Files Uploaded (Confirmation)
+      - name: Verify Uploaded Assets
         if: ${{ steps.release_check.outcome == 'success' }}
         run: |
-          echo "Contents of downloaded-artifacts directory:"
-          ls -R ./downloaded-artifacts/ || true
+          echo "Uploaded assets:"
+          gh release view "${{ env.NEW_TAG }}" --json assets -q '.assets[].name'
